fix css of StartGuest page
- Fixed an issue where text went out of the screen

--- a/react/src/assets/styles/LinkReceiver/StartGuest.scss
+++ b/react/src/assets/styles/LinkReceiver/StartGuest.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50%;
+    height: 100%;
 
     .sgTitleWrapper {
       display: flex;
@@ -69,6 +69,7 @@
     display: flex;
     justify-content: center;
     margin-top: 1rem;
+    margin-bottom: 0.98rem;
 
     span {
       color: #CDCDCD;
